--- a/TPR_ExampleView/Controls/ImageInfo.resx
+++ b/TPR_ExampleView/Controls/ImageInfo.resx
@@ -117,38 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="восстановить_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\восстановить-32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="выбрать_все_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\выбрать-все-32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="закрыть_окно_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\закрыть-окно-32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="открыть_папку_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\открыть-папку-32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="отмеченный_чекбокс_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\отмеченный-чекбокс-2-32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="пустой_чекбокс_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\пустой-чекбокс-32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="свернуть_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\свернуть-32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="сохранить_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\сохранить-32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="удалить_все_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\удалить-все-32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="файл_изображения_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\файл-изображения-32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="форма_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\форма-32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
+  <metadata name="contextMenuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
 </root>
