--- a/TPR_ExampleView/Forms/FormSettings.resx
+++ b/TPR_ExampleView/Forms/FormSettings.resx
@@ -117,7 +117,22 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="toolStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+  <metadata name="toolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <data name="label2.ToolTip" xml:space="preserve">
+    <value>(Двойной клик, чтобы вывести подсказку на отдельную форму)
+Указывается имя выходного файла
+Следующие сочетания символов будут заменяться
+%f - Имя изображения
+%m - Название метода (оригинальное название)
+%n - Название метода (кнопка меню)
+%N - Название метода (через атрибут)
+%t - Дата начала выполнения всех задач
+%d - Дата начала выполнения задачи
+%D - Дата конца выполнения задачи
+%i - Номер задачи
+%u - Инкрементное значение, для избежания совпадений имен. Используется, если выключен параметр перезаписывать существующие файлы
+</value>
+  </data>
 </root>
